hot fix: some styles were changed after auto replacing

--- a/src/pug/base.pug
+++ b/src/pug/base.pug
@@ -205,7 +205,8 @@ html(lang="ru")
   _section
   _common
   _card
-  _sales
+
+    + найти внесённые автозаменой изменения https://github.com/ru39391/ds.src/commit/c9873189729f2f34d535759217546e7950546e30
 
   padding
   px
