--- a/src/scss/tpl/_footer.scss
+++ b/src/scss/tpl/_footer.scss
@@ -8,10 +8,10 @@
   }
 }
 
-.footer__nav-title.h4 {
+.footer__nav-title {
   margin: 0 0 1.25rem;
 }
 
-.footer__nav-item.color-white.mb-2 {
+.footer__nav-item {
   @include fs-lh(.75rem,1rem);
 }
