--- a/src/scss/tpl/_filter.scss
+++ b/src/scss/tpl/_filter.scss
@@ -45,7 +45,7 @@
   box-shadow: 0px 4px 10px rgba(0, 0, 0, .12) inset;
 }
 
-.filter-toggler__icon.mr-2 {
+.filter-toggler__icon {
   @include fw(18px);
   @include wh(18px);
   pointer-events: none;
