padding: px -> rem, pt. 1

--- a/src/pug/base.pug
+++ b/src/pug/base.pug
@@ -215,3 +215,5 @@ html(lang="ru")
   service.pug - изменить вёрстку promo
   избавиться от .content__date и прочих похожих
   flex-grow: 1 -> flex-grow-1
+
+  contacts.pug - поправить баг с аккордеоном
