--- a/src/pug/base/brands.pug
+++ b/src/pug/base/brands.pug
@@ -1,122 +1,7 @@
+- var brands = [{title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-1.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-1.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-2.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-1.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-3.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-2.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-2.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-3.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-4.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-5.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-4.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-2.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-3.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-4.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-5.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-3.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-4.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-5.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-1.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-5.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-3.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-4.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-2.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-3.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-2.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-2.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-3.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-2.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-1.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-3.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-1.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-1.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-2.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-1.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-3.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-2.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-2.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-3.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-4.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-5.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-4.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-2.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-3.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-4.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-5.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-3.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-4.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-5.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-1.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-5.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-3.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-4.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-2.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-3.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-2.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-2.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-3.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-2.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-1.jpg'}, {title: '', classmod: 'd-flex flex-column align-items-center justify-content-center p-3', titleclass: '', img: 'content/logo/logo-3.jpg'}]
+
 .slides.slides_tile.swiper-container.pt-1.pb-lg-4
   .swiper-wrapper
-    .swiper-slide
-      include ../logo/logo-1.pug
-    .swiper-slide
-      include ../logo/logo-1.pug
-    .swiper-slide
-      include ../logo/logo-2.pug
-    .swiper-slide
-      include ../logo/logo-1.pug
-    .swiper-slide
-      include ../logo/logo-3.pug
-    .swiper-slide
-      include ../logo/logo-2.pug
-    .swiper-slide
-      include ../logo/logo-2.pug
-    .swiper-slide
-      include ../logo/logo-3.pug
-    .swiper-slide
-      include ../logo/logo-4.pug
-    .swiper-slide
-      include ../logo/logo-5.pug
-    .swiper-slide
-      include ../logo/logo-4.pug
-    .swiper-slide
-      include ../logo/logo-2.pug
-    .swiper-slide
-      include ../logo/logo-3.pug
-    .swiper-slide
-      include ../logo/logo-4.pug
-    .swiper-slide
-      include ../logo/logo-5.pug
-    .swiper-slide
-      include ../logo/logo-3.pug
-    .swiper-slide
-      include ../logo/logo-4.pug
-    .swiper-slide
-      include ../logo/logo-5.pug
-    .swiper-slide
-      include ../logo/logo-1.pug
-    .swiper-slide
-      include ../logo/logo-5.pug
-    .swiper-slide
-      include ../logo/logo-3.pug
-    .swiper-slide
-      include ../logo/logo-4.pug
-    .swiper-slide
-      include ../logo/logo-2.pug
-    .swiper-slide
-      include ../logo/logo-3.pug
-    .swiper-slide
-      include ../logo/logo-2.pug
-    .swiper-slide
-      include ../logo/logo-2.pug
-    .swiper-slide
-      include ../logo/logo-3.pug
-    .swiper-slide
-      include ../logo/logo-2.pug
-    .swiper-slide
-      include ../logo/logo-1.pug
-    .swiper-slide
-      include ../logo/logo-3.pug
-    .swiper-slide
-      include ../logo/logo-1.pug
-    .swiper-slide
-      include ../logo/logo-1.pug
-    .swiper-slide
-      include ../logo/logo-2.pug
-    .swiper-slide
-      include ../logo/logo-1.pug
-    .swiper-slide
-      include ../logo/logo-3.pug
-    .swiper-slide
-      include ../logo/logo-2.pug
-    .swiper-slide
-      include ../logo/logo-2.pug
-    .swiper-slide
-      include ../logo/logo-3.pug
-    .swiper-slide
-      include ../logo/logo-4.pug
-    .swiper-slide
-      include ../logo/logo-5.pug
-    .swiper-slide
-      include ../logo/logo-4.pug
-    .swiper-slide
-      include ../logo/logo-2.pug
-    .swiper-slide
-      include ../logo/logo-3.pug
-    .swiper-slide
-      include ../logo/logo-4.pug
-    .swiper-slide
-      include ../logo/logo-5.pug
-    .swiper-slide
-      include ../logo/logo-3.pug
-    .swiper-slide
-      include ../logo/logo-4.pug
-    .swiper-slide
-      include ../logo/logo-5.pug
-    .swiper-slide
-      include ../logo/logo-1.pug
-    .swiper-slide
-      include ../logo/logo-5.pug
-    .swiper-slide
-      include ../logo/logo-3.pug
-    .swiper-slide
-      include ../logo/logo-4.pug
-    .swiper-slide
-      include ../logo/logo-2.pug
-    .swiper-slide
-      include ../logo/logo-3.pug
-    .swiper-slide
-      include ../logo/logo-2.pug
-    .swiper-slide
-      include ../logo/logo-2.pug
-    .swiper-slide
-      include ../logo/logo-3.pug
-    .swiper-slide
-      include ../logo/logo-2.pug
-    .swiper-slide
-      include ../logo/logo-1.pug
-    .swiper-slide
-      include ../logo/logo-3.pug
+    each brands__item in brands
+      .swiper-slide
+        +brand(brands__item.title, brands__item.classmod, brands__item.titleclass, brands__item.img)
