--- a/src/pug/contacts.pug
+++ b/src/pug/contacts.pug
@@ -13,9 +13,9 @@ block wrapper
     .row.align-items-start
       .col-xl-3.col-lg-4.order-2.order-lg-1.mb-5.mb-lg-4
         .accordion.active.mb-2
-          .accordion__header
-            button.accordion__toggler(type="button") ДонШина Ростов
-          .accordion__body
+          .accordion__header.px-4
+            button.accordion__toggler.readmore.d-block.h3.text-left.font-weight-bold.color-brand(type="button") ДонШина Ростов
+          .accordion__body.overflow-hidden.px-4
             .contacts
               .contacts__item.d-flex.align-items-center.h5.text-wrap.mb-3
                 +icon('placemark','contacts__icon color-brand mr-2')
@@ -42,9 +42,9 @@ block wrapper
                   br
                   | Вс. – Выходной
         .accordion.mb-2
-          .accordion__header
-            button.accordion__toggler(type="button") ДонШина Таганрог
-          .accordion__body
+          .accordion__header.px-4
+            button.accordion__toggler.readmore.d-block.h3.text-left.font-weight-bold.color-brand(type="button") ДонШина Таганрог
+          .accordion__body.overflow-hidden.px-4
             .contacts
               .contacts__item.d-flex.align-items-center.h5.text-wrap.mb-3
                 +icon('placemark','contacts__icon color-brand mr-2')
@@ -71,9 +71,9 @@ block wrapper
                   br
                   | Вс. – Выходной
         .accordion
-          .accordion__header
-            button.accordion__toggler(type="button") ДонШина Волгоград
-          .accordion__body
+          .accordion__header.px-4
+            button.accordion__toggler.readmore.d-block.h3.text-left.font-weight-bold.color-brand(type="button") ДонШина Волгоград
+          .accordion__body.overflow-hidden.px-4
             .contacts
               .contacts__item.d-flex.align-items-center.h5.text-wrap.mb-3
                 +icon('placemark','contacts__icon color-brand mr-2')
