--- a/src/scss/base/_extends.scss
+++ b/src/scss/base/_extends.scss
@@ -138,7 +138,7 @@
 %date-item {
   @include h6;
   @include inline-block;
-  padding: 2px 6px;
+  padding: .125rem .375rem;
   border-radius: 12px;
   background: $color__light;
 }
