--- a/src/pug/category-tires.pug
+++ b/src/pug/category-tires.pug
@@ -6,39 +6,38 @@ block meta
 block filter
   .header__footer
     button.filter-toggler(type="button")
-      svg.filter-toggler__icon.mr-2
-        use(xlink:href="#icon-filter")
+      +icon('filter','filter-toggler__icon mr-2')
       span.filter-toggler__title
         span.filter-toggler__show Показать
         span.filter-toggler__hide Скрыть
         | фильтр
 
 block wrapper
-    .wrapper
-      nav.pathway
-        a.pathway__link(href="#") Главная
-        a.pathway__link(href="#") Шины
-        a.pathway__current(href="#") Шины R18
-      section.content
-        h1 Шины в Ростове-на-Дону
-      .category-counter.mb-4 14 840 товаров
-      .row
-        .col-xl-2.col-lg-3.mb-lg-4
-          include base/filter-tires.pug
+  .wrapper
+    nav.pathway
+      a.pathway__link(href="#") Главная
+      a.pathway__link(href="#") Шины
+      a.pathway__current(href="#") Шины R18
+    section.content
+      h1 Шины в Ростове-на-Дону
+    .category-counter.mb-4 14 840 товаров
+    .row
+      .col-xl-2.col-lg-3.mb-lg-4
+        include base/filter-tires.pug
 
-        .col-xl-10.col-lg-9.mb-4
-          include base/brands.pug
+      .col-xl-10.col-lg-9.mb-4
+        include base/brands.pug
 
-      include category/popular.pug
+    include category/popular.pug
 
-      .section.mb-3
-        .section__title Рекомендуем так же:
-        include category/carousel.pug
+    .section.mb-3
+      .section__title Рекомендуем так же:
+      include category/carousel.pug
 
-      include base/links.pug
+    include base/links.pug
 
-      .section
-        .content.content_expanded
-          include base/content.pug
-          .content__footer
-            button.readmore.readmore_btn.readmore_arrow-down(type="button")
+    .section
+      .content.content_expanded
+        include base/content.pug
+        .content__footer
+          button.readmore.readmore_btn.readmore_arrow-down(type="button")
