--- a/src/pug/libs/mixins.pug
+++ b/src/pug/libs/mixins.pug
@@ -16,13 +16,19 @@ mixin slidesNav(slidesNav__prev, slidesNav__next, slidesNav__classmod)
     button.slides__btn.slides__btn_next.slides-carousel-next(class=slidesNav__next type="button")
       +icon('arrow-right')
 
+mixin brand(brand__title, brand__classmod, brand__title_classmod, brand__img="content/logo/logo-1.jpg")
+  a.brand(class=brand__classmod href="#")
+    +img(brand__img)
+    if (brand__title !== '')
+      span.brand__title(class=brand__title_classmod)!= brand__title
+
 mixin banner(banner__img, banner__noshadow=false, banner__classmod="card_column card_banner", banner__title="Запись на шиномонтаж онлайн")
   if (banner__noshadow)
     .card(class=banner__classmod)
-      .banner.banner_noshadow
+      .banner.banner_noshadow.overflow-hidden
         +img(banner__img,'img-cover')
-        .banner__inner
-          .banner__title.banner__title_colored.banner__title_xs!= banner__title
+        .banner__inner.d-flex.flex-column.align-items-center.justify-content-between.px-3.py-4
+          .banner__title.h1.font-weight-bold.color-brand!= banner__title
           a.btn.text-uppercase(href="#") Записаться
   else
     .card(class=banner__classmod)
