--- a/src/pug/subcategory-tires-tile.pug
+++ b/src/pug/subcategory-tires-tile.pug
@@ -24,9 +24,7 @@ block wrapper
       .category-counter.mb-4 1 840 товаров
       .row
         .col-xl-2.col-lg-3.mb-lg-4
-          a.brand.brand_category.mb-3(href="#")
-            img.img-fluid(src="../img/content/logo/logo-1.jpg" alt="" title="")
-            span.brand__title Cordiant
+          +brand('Cordiant', 'brand_category d-flex flex-column align-items-center justify-lg-content-center justify-content-between bg-white py-2 py-lg-3 px-3 mb-3', 'd-inline-block')
           include base/filter-tires.pug
 
         .col-xl-10.col-lg-9.mb-4
