--- a/src/scss/tpl/_accordion.scss
+++ b/src/scss/tpl/_accordion.scss
@@ -1,58 +1,50 @@
 .accordion {
-    border-radius: 8px;
-    background: #fff;
-    box-shadow: 2px 2px 8px rgba(0, 0, 0, .16);
+  border-radius: 8px;
+  background: #fff;
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, .16);
 
-    &.active {
-        padding: 0 0 26px;
+  &.active {
+    padding: 0 0 1.625rem;
 
-        .accordion__header {
-            @include py(1rem,.75rem);
-            margin: 0 0 1.5rem;
-            border-color: $color__border;
-        }
-
-        .accordion__toggler {
-            &:before {
-                opacity: 0;
-            }
-
-            &:after {
-                opacity: 0;
-            }
-        }
-
-        .accordion__body {
-            opacity: 1;
-            height: 100%;
-            visibility: visible;
-        }
+    .accordion__header {
+      @include py(1rem,.75rem);
+      margin: 0 0 1.5rem;
+      border-color: $color__border;
     }
+
+    .accordion__toggler {
+      &:before {
+        opacity: 0;
+      }
+
+      &:after {
+        opacity: 0;
+      }
+    }
+
+    .accordion__body {
+      opacity: 1;
+      height: 100%;
+      visibility: visible;
+    }
+  }
 }
 
 .accordion__header {
-    @include border(0 0 1px,rgba(0,0,0,0));
-    padding: 8px 24px;
-    cursor: pointer;
-    transition: all .3s ease;
+  @include py(.5rem);
+  @include border(0 0 1px,rgba(0,0,0,0));
+  cursor: pointer;
+  transition: all .3s ease;
 }
 
 .accordion__toggler {
-    @include h3;
-    @extend .readmore;
-    display: block;
-    width: 100%;
-    text-align: left;
-    font-weight: bold;
-    color: $color__brand;
-    pointer-events: none;
+  width: 100%;
+  pointer-events: none;
 }
 
 .accordion__body {
-    height: 0;
-    opacity: 0;
-    overflow: hidden;
-    visibility: hidden;
-    padding: 0 24px;
-    transition: all .3s ease;
+  height: 0;
+  opacity: 0;
+  visibility: hidden;
+  transition: all .3s ease;
 }
