--- a/src/scss/tpl/_btn.scss
+++ b/src/scss/tpl/_btn.scss
@@ -1,7 +1,7 @@
 .btn {
   @extend %btn-default;
   @extend %btn-theme;
-  padding: 4px 12px;
+  padding: .25rem .75rem;
   white-space: nowrap;
   display: inline-flex;
   align-items: center;
