--- a/src/scss/tpl/_footer.scss
+++ b/src/scss/tpl/_footer.scss
@@ -1,10 +1,10 @@
 .footer {
   @include media-breakpoint-up(md) {
-    padding: 40px 0;
+    padding: 2.5rem 0;
   }
 
   @include media-breakpoint-down(sm) {
-    padding: 40px 16px 55px;
+    padding: 2.5rem 1rem 3rem;
   }
 }
 
